syntax = "proto3";

option csharp_namespace = "CommentService.Users";

package user;

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetLocalUser(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest { string user_id = 1; }

message GetUserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message User {
  string id = 1;
  string mongo_id = 2 [ json_name = "_id" ];
  string email = 3;
  string username = 4;
  string first_name = 5;
  string last_name = 6;
  string role = 7;
  string bio = 8;
  string created_at = 9;
  string updated_at = 10;
}